--- a/style.css
+++ b/style.css
@@ -54,7 +54,6 @@ p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
 }
 
-
 p {
   text-wrap: pretty;
 }
@@ -72,7 +71,6 @@ textarea:not([rows]) {
 :target {
   scroll-margin-block: 5ex;
 }
-
 
 
 /* FONTS */
@@ -94,17 +92,30 @@ textarea:not([rows]) {
   }
 
 
-
 /* CUSTOM PROPERTIES */
 
 :root {
+
+  /* Primitive properties */
+
     --clr-dark: hsl(0, 0%, 5%);
     --clr-green: hsl(130, 97%, 44%);
 
-    --ff1: 'Metal Mania';
-    --ff2: 'Pirata One';
+    --ff-serif1: 'Metal Mania';
+    --ff-serif2: 'Pirata One';
 
     --spacing-4px: 4px;
+
+
+    /* Semantic properties */
+
+    --clr-primary: var(--clr-green);
+    --clr-secondary: var(--clr-dark);
+
+    --ff-primary: var(--ff-serif1);
+    --ff-secondary: var(--ff-serif2);
+
+    --spacing-50: var(--spacing-4px);
 }
 
 
@@ -112,7 +123,7 @@ textarea:not([rows]) {
 /* UTILITIES */
 
 .flow {
-    --flow-space: var(--spacing-4px);
+    --flow-space: var(--spacing-50);
 }
 
 .flow > * + * {
@@ -120,16 +131,18 @@ textarea:not([rows]) {
 }
 
 
+/* BASE STYLES */
+
 html {
     scroll-behavior: smooth;
 }
 
 body {
     padding: 10px;
-    background-color: var(--clr-dark);
-    color: var(--clr-green);
+    background-color: var(--clr-secondary);
+    color: var(--clr-primary);
     text-align: center;
-    font-family: var(--ff1);
+    font-family: var(--ff-primary);
     letter-spacing: 0.1em;
 }
 
@@ -138,18 +151,21 @@ body {
     margin-inline: auto;
 }
 
-.main-heading {
-    margin-block-end: 1rem;
-    font-size: 3rem;
+.section-heading {
+  margin-block-end: 3rem;
+  font-size: 2rem;
 }
 
-.section-heading {
-    margin-block-end: 2rem;
-    font-size: 2rem;
-}
+
+/* HEADER */
 
 .header {
-    padding-block: 2rem;
+  padding-block: 2rem;
+}
+
+.main-heading {
+    margin-block-end: 1.5rem;
+    font-size: 3rem;
 }
 
 .nav__menu {
@@ -161,24 +177,27 @@ body {
   &:is(:hover, :focus-visible) {
     opacity: .75;
     text-decoration: underline;
-    text-underline-offset: 4px;
+    text-underline-offset: var(--spacing-50);
   }
 }
 
-.lineup-wrapper {
-    padding-block: 3rem 2rem;
-}
 
-.discography-wrapper {
-    padding-block: 1rem 2rem;
+/*LINEUP */
+
+.lineup-wrapper {
+    padding-block: 4rem;
 }
 
 .members {
     --min-width: 230px;
-    --grid-gap: 40px;
+    --grid-gap: 60px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(min(var(--min-width, 100%)), 1fr));
     gap: var(--grid-gap);
+
+    @media (width > 60rem) {
+      --grid-gap: 40px;
+    }
 }
 
 .member {
@@ -186,6 +205,7 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    transition: opacity 250ms ease-in-out;
 }
 
 .member__image {
@@ -204,6 +224,27 @@ body {
     font-style: italic;
 }
 
+.members:has(.member__image:is(:hover, :focus-visible)) {
+  
+  .member:not(:is(:hover, :focus-visible)) {
+    opacity: .7;
+  }
+}
+
+.member:has(.member__image:is(:hover, :focus-visible)) {
+  
+  .member__heading {
+    text-decoration: underline;
+    text-underline-offset: var(--spacing-50)
+  }
+}
+
+
+/* DISCOGRAPHY */
+
+.discography-wrapper {
+  padding-block: 3rem 5rem;
+}
 
 .albums {
     --min-width: 300px;
@@ -211,7 +252,6 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(min(var(--min-width, 100%)), 1fr));
     gap: var(--grid-gap);
-    padding-block: 2rem;
 }
 
 .album {
@@ -219,6 +259,7 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    transition: opacity 250ms ease-in-out;
 }
 
 .album__image {
@@ -233,6 +274,16 @@ body {
     }
 }
 
+.albums:has(.album__image:is(:hover, :focus-visible)) {
+  
+  .album:not(:is(:hover, :focus-visible)) {
+    opacity: .7;
+  }
+}
+
+
+/* FOOTER */
+
 .footer {
     position: relative;
     padding-block: 2rem;
@@ -244,7 +295,7 @@ body {
         display: block;
         width: 100%;
         height: 2px;
-        background-color: var(--clr-green);
+        background-color: var(--clr-primary);
         opacity: .25;
     }
 }
@@ -258,20 +309,10 @@ body {
     text-decoration: underline;
     text-decoration-thickness: 2.5px;
     text-underline-offset: 2.5px;
-}
+    transition: opacity 250ms ease-in-out;
 
-
-.members:has(.member__image:is(:hover, :focus-visible)) {
-  
-  .member:not(:is(:hover, :focus-visible)) {
-    opacity: .75;
+    &:is(:hover, :focus-visible) {
+      opacity: .75;
   }
 }
 
-.member:has(.member__image:is(:hover, :focus-visible)) {
-  
-  .member__heading {
-    text-decoration: underline;
-    text-underline-offset: 4px;
-  }
-}
